--- a/style/Style.css
+++ b/style/Style.css
@@ -1,17 +1,17 @@
 #body{
-    background-color:#637494;
+    background:  #DBDFFD;
 }
 .login-contenedor{
-
     width: 400px;
     height: 500px;
-    background-color: #313745;
+    background-color: #646FD4;
     padding-right: 500px;
     padding-left: 200px;
     margin-right: auto;
     margin-left: auto;
     margin-top: 70px;
-    border-radius: 20px;       
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25) ;       
 }
 .form-content{
     width: 400px;
@@ -30,3 +30,59 @@
        
 
 }
+
+.buttons{
+    width: 30rem;
+    height: 50px;
+    margin: 1.2rem 0 0 8rem;
+    border-radius: 2rem;
+    background-color: #DBDFFD;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25) ; 
+
+}
+.game-container{
+    width: 400px;
+    height: 500px;
+    background-color: #242F9B;
+    padding-right: 500px;
+    padding-left: 200px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 2rem;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25) ; 
+
+}
+.title-container{       
+    background-color: #FF0D47A1;
+    width: 20rem;
+    height: 3rem;
+    margin: 0 2rem 0 25rem;
+    border-radius: 2rem;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25) ;
+}
+.titulos{
+    font-family:Marker Felt, fantasy;
+    margin-left: 4rem;
+    font-style:oblique;
+    color:#DBDFFD ;
+}
+.question-container{
+    background-color: #9BA3EB;
+    width: 50rem;
+    height:5rem;
+    border-radius: 5rem;
+}
+.questions{
+    margin: 1rem 2rem 0 8rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2.5rem;   
+}
+.Butoonsalir{
+    width: 5rem;
+    height: 2.5rem;
+    margin: 0 0  1rem 20rem;
+}
+
