--- a/style/Style.css
+++ b/style/Style.css
@@ -1,67 +1,89 @@
 #body{
-    background:  #DBDFFD;
-}
-.login-contenedor{
-    width: 400px;
-    height: 500px;
-    background-color: #646FD4;
-    padding-right: 500px;
-    padding-left: 200px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 70px;
-    border-radius: 20px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25) ;       
-}
+    background:  #dfe2fb;}
 
+
+.contendorPrincipal{
+    /* display: flex; */
+    margin-left: 28rem;
+    justify-content: center;
+    align-items: center;
+ }   
+
+/*estilos para el viewLogin*/
 .contarine-description{
-    background-color: #9ea2c8;
+    color: #90E0EF;
     width: 42rem;
-    border-radius: 1rem;
-    margin-left: 5rem;
-    
+    padding: 2rem;    
 }
 .description{    
-    color: rgb(9, 7, 7);
-    width: 38rem; 
-       
-    font-size: 1.2rem;  
-   
+    color: #F1D4D4;
+    width: 38rem;
+    margin-left: 4rem;              
+    font-size: 1.2rem;
+    text-align:justify;    
+}
+
+.login-contenedor{
+    width: 50rem;
+    height: 500px;
+    background-color: rgb(3, 4, 94);     
+    margin-top: 8rem;
+    border-radius: 3rem;    
+    margin-left:auto ;
+    margin-right: auto;    
+    box-shadow: 5px 5px 5px rgba(3, 4, 94, 0.3) ;    
 }
 .form-content{
     width: 400px;
     height: 300px;
-    margin-top:2 rem;
-    background-color: rgb(12, 17, 21);
-    padding-right: 200px;
-    padding-left: 200px;
-    border-radius: 5rem;
-    
+    margin-top:1rem;       
+    border-radius: 5rem;     
 }
-
-.input-username{   
-    margin-top: 5rem;
-    margin-left: 3rem;
-    width: 10rem;
-    background-color: #9BA3EB; 
-       
-
-}
-
-
-
-.butto-iniciar{
+.butto-iniciar,.Buttonsalir{
     width: 9rem;
     height: 2.5rem;
-    margin: 2rem 0  1rem 9rem;
+    margin: 2rem 0  1rem 21rem;
     border-radius: 5rem;
     font-style:oblique;
     color:#DBDFFD ;
-    background-color:#764AF1;
-
+    background-color:#C060A1;
+}
+.input-username{   
+    margin-top: 3rem;
+    margin-left: 15rem;
+    text-align: center;
+    width: 10rem;
+    background-color: #F1D4D4;  
+}
+.title-container{       
+    background-color: rgb(3, 4, 94);
+    width: 20rem;
+    height: 5rem;
+    margin-top:3rem; 
+    align-content: center;
+    text-align: center;   
+    border-radius: 2rem;
+    margin-left: 15rem;
+    box-shadow: 5px 5px 5px rgba(245, 241, 241, 0.25) ;
 }
 
+.titulos{
+    font-family:Marker Felt, fantasy;    
+    font-style:oblique;
+    color:#d4f1f6; ;
+}
 
+.buttonHistory{
+    width: 9rem;
+    height: 2.5rem;
+    margin-left: 21rem;    
+    border-radius: 5rem;
+    font-style:oblique;
+    color:#DBDFFD ;
+    background-color:#9BA3EB;
+}
+
+/*viewLogin*/
 .buttons{
     width: 30rem;
     height: 50px;
@@ -70,44 +92,30 @@
     background-color: #DBDFFD;
     font-family:Arial, Helvetica, sans-serif;
     font-size: 1rem;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25) ; 
+    box-shadow: 5px 5px 5px rgba(247, 239, 239, 0.5) ; 
 
 }
 .game-container{
     width: 400px;
     height: 500px;
-    background-color: #242F9B;
+    background-color: rgb(3, 4, 94);
     padding-right: 500px;
     padding-left: 200px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 2rem;
-    border-radius: 20px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25) ; 
+    border-radius: 6rem;
+    margin-top: 5rem;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5) ; 
 
 }
-.title-container{       
-    background-color: #FF0D47A1;
-    width: 20rem;
-    height: 3rem;
-    margin: 0 2rem 0 25rem;
-    border-radius: 2rem;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25) ;
-}
-.titulos{
-    font-family:Marker Felt, fantasy;
-    margin-left: 4rem;
-    font-style:oblique;
-    color:#DBDFFD ;
-}
+
+
 .question-container{
     background-color: #9BA3EB;
     width: 50rem;
-    height:5rem;
+    height:6rem;
     border-radius: 5rem;
 }
 .questions{
-    margin: 1rem 2rem 0 8rem;
+    margin: 1rem 2rem 0 16rem;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2.5rem;   
 }
@@ -124,24 +132,41 @@
     margin-right: 20rem;
     border-radius: 5rem;
 }
+.nivel-game,
+.user-puntaje{
+    color: #d4f1f6;
+    
+}
+
 
 .historia-container{
-    background-color:#9BA3EB;
+    background-color:#242F9B;
     margin-top: 5rem;
     border-radius: 2rem;
-    width: 20rem;
-    height: 30rem;
+    width: 25rem;
+    height: 40rem;
     overflow: scroll;
-    margin-left: 25rem;
+    margin-left: 15rem;
 }
 .newUsers{
-    background-color: #242F9B;
+    background-color: #9BA3EB;
     color: #DBDFFD;
-    width: 6.5rem;
+    width: 7rem;
     height: 3rem;
-    margin-left: 1rem;
-    margin-top: 1rem;
+    margin-left: 4rem;
+    margin-top: 3rem;
     border-radius: 1rem;
     font-size:1.5rem;
 }
+
+.BotonsalirHistorial{
+    margin-top: 1rem;
+    margin-left: 9rem;
+    width: 7rem;
+    height: 3rem;
+    border-radius: 5rem;
+    background-color: #C060A1;
+    color: #d4f1f6;
+}
+
 
